scrollbar fix

--- a/src/views/Layout/style.module.css
+++ b/src/views/Layout/style.module.css
@@ -35,14 +35,14 @@
   line-height: 24px;
 }
 
-.backImg{
+.backImg {
   height: 1.5rem;
   width: 1.5rem;
   margin-bottom: 1.5rem;
 }
 
 .modal {
-  overflow-y:auto ;
+  overflow-y: auto;
   width: 70vw;
   height: 86vh;
   background-color: #fff;
@@ -58,7 +58,7 @@
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.08),
     0px 0px 20px rgba(0, 0, 0, 0.12);
   border-radius: 24px 24px 0px 0px;
-  padding: 4.16% 2.8% 3.5% 7%;
+  padding: 4.16% 2.8% 2.5% 7%;
   text-align: left;
   -ms-overflow-style: none; 
   scrollbar-width: none;  
